[gd_scene load_steps=4 format=3 uid="uid://1vfmbcliamnd"]

[ext_resource type="Script" uid="uid://b5f8rvkttiv0a" path="res://scripts/EquipmentUI.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cbdmh1mil4gs1" path="res://scenes/EquipmentSlotUI.tscn" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.07, 0.07, 0.1, 0.9)

[node name="EquipmentUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -260.0
offset_right = 260.0
offset_bottom = 260.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="Title" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 38.0
text = "Equip"

[node name="Body" type="ColorRect" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 44.0
offset_right = -12.0
offset_bottom = -12.0
color = Color(0.13, 0.13, 0.16, 0.8)

[node name="Silhouette" type="ColorRect" parent="Panel/Body"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -201.0
offset_right = 192.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25, 0.25, 0.3, 0.6)

[node name="Slots" type="Node2D" parent="Panel/Body"]
position = Vector2(218, 190)

[node name="HeadSlot" parent="Panel/Body/Slots" instance=ExtResource("2")]
offset_top = -120.0
offset_right = 64.0
offset_bottom = -56.0

[node name="WeaponSlot" parent="Panel/Body/Slots" instance=ExtResource("2")]
offset_left = -100.0
offset_right = -36.0
offset_bottom = 64.0

[node name="BodySlot" parent="Panel/Body/Slots" instance=ExtResource("2")]

[node name="AccessorySlot" parent="Panel/Body/Slots" instance=ExtResource("2")]
offset_left = 100.0
offset_top = 40.0
offset_right = 164.0
offset_bottom = 104.0
